Updates to script part 1 and 2

--- a/index_part1.html
+++ b/index_part1.html
@@ -16,6 +16,6 @@
 
     <!-- external script example: -->
 
-    <script src="script.js"></script>
+    <script src="../308.1.1_Data_Manipulation/script_part1.js"></script>
 </body>
 </html>
